[package]
name = "mdview"
version = "0.1.0"
edition = "2021"
description = "A terminal-based markdown file viewer"
license = "MIT"

[[bin]]
name = "mdview"
path = "src/main.rs"

[dependencies]
# TUI framework
ratatui = "0.26"
crossterm = "0.27"

# Markdown parsing and rendering
pulldown-cmark = "0.10"
syntect = "5.1"

# CLI argument parsing
clap = { version = "4.4", features = ["derive"] }

# File system operations
notify = "6.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
criterion = "0.5"
proptest = "1.0"
tempfile = "3.8"
