[package]
name = "mdless"
version = "0.1.0"
edition = "2024"
authors = ["Ray Krueger <raykrueger@gmail.com>"]
description = "A terminal-based markdown file viewer"
license = "Apache-2.0"
repository = "https://github.com/raykrueger/mdless"
homepage = "https://github.com/raykrueger/mdless"
documentation = "https://github.com/raykrueger/mdless"
readme = "README.md"
keywords = ["markdown", "viewer", "terminal", "tui", "cli"]
categories = ["command-line-utilities", "text-processing"]

[[bin]]
name = "mdless"
path = "src/main.rs"

[dependencies]
# TUI framework
ratatui = "0.29"
crossterm = "0.29"

# Markdown parsing and rendering
pulldown-cmark = "0.13"
syntect = "5.1"

# CLI argument parsing
clap = { version = "4.4", features = ["derive"] }

# File system operations
notify = "8.2"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

[dev-dependencies]
criterion = "0.7"
proptest = "1.0"
tempfile = "3.8"
